--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dimadivan</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
-    <h1>Диван, это я!</h1>
+    <div id="top-part" class="container"><h1>Диван, это я!</h1></div>
+    
 </body>
 
 </html>
