--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <div id="top-part" class="container"><h1>Диван, это я!</h1></div>
+    <div id="top-part" class="container">
+        <h1>Диван - это я!</h1>
+        <span>русскоязычный <a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9_%D1%8E%D1%82%D1%83%D0%B1%D0%B5%D1%80">виртуальный ютубер</a>, программист, игродел, геймер</span>
+    </div>
     
 </body>
 
