--- a/index.html
+++ b/index.html
@@ -7,14 +7,44 @@
     <title>dimadivan</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
     <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-    <div id="top-part" class="container">
+    <section>
         <h1>Диван - это я!</h1>
-        <span>русскоязычный <a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9_%D1%8E%D1%82%D1%83%D0%B1%D0%B5%D1%80">виртуальный ютубер</a>, программист, игродел, геймер</span>
+        <small>русскоязычный <a
+                href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9_%D1%8E%D1%82%D1%83%D0%B1%D0%B5%D1%80">виртуальный
+                ютубер</a>, программист, игродел, геймер</small>
+        <img id="avatar" src="/images/divan_love.webp" alt="диван с ручками">
+    </section>
+    <div id="socials">
+        <a href="https://twitch.tv/dimadivan">
+            <i class="bi-twitch" style="font-size: 48px;"></i>
+        </a>
+        <a href="https://twitch.tv/dimadivan">
+            <i class="bi-youtube" style="font-size: 48px;"></i>
+        </a>
+        <a href="https://twitch.tv/dimadivan">
+            <i class="bi-telegram" style="font-size: 48px; "></i>
+        </a>
+        <a href="https://twitch.tv/dimadivan">
+            <i class="bi-discord" style="font-size: 48px; "></i>
+        </a>
     </div>
-    
+    <hr>
+    <section>
+        <h3>Наше объединение</h3>
+        <img style="max-height: 500px;" src="/images/stellaris_nox_logo.webp" alt="stellaris nox logo">
+    </section>
+    <hr>
+    <section>
+        <h3>Чем я занимаюсь?</h3>
+        <p style="text-align: center;">
+            Я стримлю игры, делаю игры, болтаю со зрителями и выкладываю рисунки, которые получаются в процессе
+            тренировки.
+        </p>
+    </section>
 </body>
 
 </html>
