--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 ютубер</a>, программист, игродел, геймер</small>
         <img id="avatar" src="/images/divan_love.webp" alt="диван с ручками">
     </section>
-    <div id="socials">
+    <div id="links">
         <a href="https://twitch.tv/dimadivan">
             <i class="bi-twitch" style="font-size: 48px;"></i>
         </a>
