--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <a href="https://twitch.tv/dimadivan">
             <i class="bi-twitch" style="font-size: 48px;"></i>
         </a>
-        <a href="https://twitch.tv/dimadivan">
+        <a href="https://www.youtube.com/@dimadivan6279">
             <i class="bi-youtube" style="font-size: 48px;"></i>
         </a>
-        <a href="https://twitch.tv/dimadivan">
+        <a href="https://t.me/+5TjxhNdGd0Q2OGZi">
             <i class="bi-telegram" style="font-size: 48px; "></i>
         </a>
-        <a href="https://twitch.tv/dimadivan">
+        <a href="https://discord.gg/AsvZ9BS7p2">
             <i class="bi-discord" style="font-size: 48px; "></i>
         </a>
     </div>
