light theme logo invert

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
     <hr>
     <section>
         <h3>Наше объединение</h3>
-        <img style="max-height: 500px;" src="/images/stellaris_nox_logo.webp" alt="stellaris nox logo">
+        <img id="stellaris-logo" style="max-height: 500px;" src="/images/stellaris_nox_logo.webp" alt="stellaris nox logo">
     </section>
     <hr>
     <section>
