primary color sas

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 
 <body>
     <section>
-        <h1>Диван - это я!</h1>
-        <small>русскоязычный <a
-                href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9_%D1%8E%D1%82%D1%83%D0%B1%D0%B5%D1%80">виртуальный
-                ютубер</a>, программист, игродел, геймер</small>
+        <hgroup>
+            <h1>Диван - это я!</h1>
+            <small>русскоязычный <a
+                    href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9_%D1%8E%D1%82%D1%83%D0%B1%D0%B5%D1%80">виртуальный
+                    ютубер</a>, программист, игродел, геймер
+            </small>
+        </hgroup>
+
         <img id="avatar" src="/images/divan_love.webp" alt="диван с ручками">
     </section>
     <div id="links">
@@ -35,7 +39,8 @@
     <hr>
     <section>
         <h3>Наше объединение</h3>
-        <img id="stellaris-logo" style="max-height: 500px;" src="/images/stellaris_nox_logo.webp" alt="stellaris nox logo">
+        <img id="stellaris-logo" style="max-height: 500px;" src="/images/stellaris_nox_logo.webp"
+            alt="stellaris nox logo">
     </section>
     <hr>
     <section>
