--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="container">
         <hgroup>
             <h1>Диван - это я!</h1>
             <small>русскоязычный <a
@@ -37,13 +37,13 @@
         </a>
     </div>
     <hr>
-    <section>
+    <section class="container">
         <h3>Наше объединение</h3>
         <img id="stellaris-logo" style="max-height: 500px;" src="/images/stellaris_nox_logo.webp"
             alt="stellaris nox logo">
     </section>
     <hr>
-    <section>
+    <section class="container">
         <h3>Чем я занимаюсь?</h3>
         <p style="text-align: center;">
             Я стримлю игры, делаю игры, болтаю со зрителями и выкладываю рисунки, которые получаются в процессе
