--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dimadivan</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
@@ -50,6 +50,17 @@
             тренировки.
         </p>
     </section>
+    <hr>
+    <nav>
+        <ul></ul>
+        <ul>
+            <li><a href="games.html">Прохождения</a></li>
+            <li><a href="art.html">Рисунки</a></li>
+            <li><a href="creations.html">Шедевры</a></li>
+            <li><a href="memes.html">Мемы</a></li>
+        </ul>
+        <ul></ul>
+    </nav>
 </body>
 
 </html>
