main page links fix

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <ul></ul>
         <ul>
             <li><a href="games.html">Прохождения</a></li>
-            <li><a href="art.html">Рисунки</a></li>
+            <li>Рисунки</li>
             <li><a href="creations.html">Шедевры</a></li>
-            <li><a href="memes.html">Мемы</a></li>
+            <li>Мемы</li>
         </ul>
         <ul></ul>
     </nav>
