--- a/games.html
+++ b/games.html
@@ -11,35 +11,146 @@
 </head>
 <body>
     <header><h1>Игры</h1></header>
-    <hr>
     <main>
-        <div class="table-header">
-            <div class="pico-color-azure-300"><i class="bi-archive"></i> Планирую пройти</div>
-            <div class="pico-color-sand-300"><i class="bi-clock"></i> Прохожу сейчас</div>
-            <div class="pico-color-amber-300"><i class="bi-award"></i> Прошел</div>
-        </div>
-        <div class="table-content">
-            <div class=""></div>
-            <div class="">
-                <span>DARK SOULS III</span>
-                <span>DARK SOULS II</span>
-            </div>
-            <div class="">
-                <span>Gothic</span>
-                <span><i class="bi-playstation"></i> Rogue Galaxy</span>
-                <span>Heavy Rain</span>
-                <span><i class="bi-playstation"></i> Sonic Riders</span>
-                <span>Emily Is Away Too</span>
-                <span><i class="bi-playstation"></i> Рататуй</span>
-                <span>Pseudoregalia</span>
-                <span>Супер корова</span>
-                <span>Disco Elysium</span>
-                <span>Arx Fatalis</span>
-                <hr>
-            </div>
-        </div>
-    </main>
     <hr>
+        <details class="container" open>
+            <summary>2024</summary>
+            <div class="gamecards">
+                <article>
+                    <header>
+                            <span class="game-title">Gothic</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star"></i>
+                            </span>
+                    </header>
+                    Игра обширна и хороша собой, но чувствуется затянутой, и прокачка сильно зависит от оружия.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Rogue Galaxy <small>(PS2)</small></span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-half"></i>
+                            </span>
+                    </header>
+                    Классная РПГ, очень понравились система слияния оружия, фабрика, доп. боссы, битвы жуков. И в целом, геймплей очень приятно удивил, чего не скажешь про <em>битву с финальным боссом</em>.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Heavy Rain</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                            </span>
+                    </header>
+                    Одна из лучших пройденных игр, от истории до геймплея <em>(кроме некоторых нюансов управления)</em>. Прости, Джейден, ты был моим любимчиком...
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Sonic Riders <small>(PS2)</small></span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star"></i>
+                                <i class="bi-star"></i>
+                            </span>
+                    </header>
+                    Игра хороша, и Соник сасный. Но впечатление сильно испортили отсутствие туториала (что не раз кусало за жопу в дальнейшем) и уровень, на который я постратил 4 незабываемых часа мучений. Единственный плюс - я сделал по этой ситуации мем.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Emily Is Away Too</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-half"></i>
+                                <i class="bi-star"></i>
+                            </span>
+                    </header>
+                    Я не принял в сердце ностальгию, которую выдает визуальное оформление игры, но грустненькие истории про людей, которые сходятся/расходятся всегда вызывают эмоции, поэтому игра просто хороша, но не более.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Рататуй <small>(PS2)</small></span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-half"></i>
+                            </span>
+                    </header>
+                    Милая игра, и геймплей предполагает к расслаблению, за исключением дополнительных уровней с паркуром.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Pseudoregalia</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                            </span>
+                    </header>
+                    Метроидвания в ретро-стиле, с особенной системой передвижения. Некоторые локации уютные, некоторые - не очень. Но в моем ряде метроидваний она стоит наравне с Castlevania: Symphony of the Night.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Супер корова</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                            </span>
+                    </header>
+                    10 доз слабительного в кусочке сахара из 10.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Disco Elysium</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                            </span>
+                    </header>
+                    Определенно одна из самых самостоятельных и стильных игр, которые я пробовал. Внутренняя империя ликует.
+                </article>
+                <article>
+                    <header>
+                            <span class="game-title">Arx Fatalis</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                            </span>
+                    </header>
+                    Знай, о путник, привидения никогда не лгут...
+                </article>
+            </div>
+            
+        </details>
+        <hr>
+    </main>
     <footer>
         <nav style="padding-left: 1rem;"><a href="/">Назад</a></nav>
     </footer>
