--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li><a href="games.html">Прохождения</a></li>
             <li>Рисунки</li>
             <li><a href="creations.html">Шедевры</a></li>
-            <li>Мемы</li>
+            <li><a href="memes.html">Мемы</a></li>
         </ul>
         <ul></ul>
     </nav>
