--- a/games.html
+++ b/games.html
@@ -12,8 +12,8 @@
 <body>
     <header><h1>Игры</h1></header>
     <main>
-    <hr>
-        <details class="container" open>
+        <hr>
+        <details class="container">
             <summary>2024</summary>
             <div class="gamecards">
                 <article>
@@ -150,6 +150,24 @@
             
         </details>
         <hr>
+        <details class="container" open>
+            <summary>2025</summary>
+            <div class="gamecards">
+                <article>
+                    <header>
+                            <span class="game-title">Penumbra: Overture</span>
+                            <span class="game-rating">
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                                <i class="bi-star-fill"></i>
+                            </span>
+                    </header>
+                    Первая игра от "Frictional Games", по значимости схожа с первой FNAF, и до сих пор геймплейно интересна, как предшественница Penumbra: Black Plague и Amnesia. А еще это единственный раз когда тебе в руки дают оружие. Сюжет это стандартные лавкрафтовские ужасы, но выполненные достаточно хорошо.
+                </article>
+            </div>
+        </details>
     </main>
     <footer>
         <nav style="padding-left: 1rem;"><a href="/">Назад</a></nav>
