add raylib demo to creations

--- a/creations.html
+++ b/creations.html
@@ -15,6 +15,9 @@
     <main>
         <iframe frameborder="0" src="https://itch.io/embed/2502961?dark=true" width="552" height="167"><a href="https://dimadivan.itch.io/divan-monster-slayer">Divan: Monster Slayer by dimadivan</a></iframe>
         <iframe frameborder="0" src="https://itch.io/embed/3310704?bg_color=272744&amp;fg_color=fbf5ef&amp;link_color=f2d3ab&amp;border_color=494d7e" width="552" height="167"><a href="https://dimadivan.itch.io/roulette">Roulette by dimadivan</a></iframe>
+        <a href="https://github.com/Divanchik/ray-demo">
+            <img src="images/raylib_demo.png" alt="">
+        </a>
     </main>
     <hr>
     <footer>
